Related tdf#153003: Copying a query and pasting as table in same DB impossible

It might be a regression from ca82061c2cad00aeddb17b766063776fee0ee41a
"make ValueTransfer easier to understand

storing references to local variables makes it harder to figure out what
the control flow is doing.
"
in peculiar:
-            sal_Int32 nDestColumn( 0 );
-            sal_Int32 nSourceColumn( 1 );
-            ValueTransfer aTransfer( nSourceColumn, nDestColumn, std::vector(aSourceColTypes), xRow, xStatementParams );
+            sal_Int32 nSourceColumn( 0 );
+            ValueTransfer aTransfer( aSourceColTypes, xRow, xStatementParams );

Change-Id: Iaa27c4f46fcc51ec12fff08f8e99f862c8b4ac2b
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/145499
Tested-by: Jenkins
Reviewed-by: Julien Nabet <serval2412@yahoo.fr>
(cherry picked from commit c9b0eacae71f111209cb77f14f2693d73e5e8d90)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/145440
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>